# ArduinoSliderMouse

./: LICENSE  README.md  main.py  pylock.toml  pyproject.toml  slider_mouse.py
arduino_slider_emg/: arduino_slider_emg.ino
